--- a/PAM/Views/Review/ViewAddAccessReview.cshtml
+++ b/PAM/Views/Review/ViewAddAccessReview.cshtml
@@ -5,108 +5,7 @@
 }
 
 <partial name="/Views/Shared/Partials/_ViewReview.cshtml" />
-
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">Systems Requested</div>
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Bureau</label>
-        <span class="form-control">@request.RequestedFor.Bureau.Description</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Unit / Job Function</label>
-        <span class="form-control">@request.RequestedFor.Unit.Name</span>
-      </div>
-    </div>
-  </div>
-  <div class="row p-2">
-    <div class="col-md-12">
-      <div class="card border-success">
-        <h5 class="card-header bg-success text-white text-center">Requested Additional Systems</h5>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col">Description</th>
-            </tr>
-          </thead>
-          <tbody>
-            @foreach (var requestedSystem in request.Systems)
-            {
-              if (!(bool)requestedSystem.InPortfolio)
-              {
-                <tr>
-                  <td>@requestedSystem.System.SystemId</td>
-                  <td>@requestedSystem.System.Name</td>
-                  <td>@requestedSystem.System.Description</td>
-                </tr>
-              }
-            }
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card border-info">
-  <div class="card-header bg-info text-white">
-    Additional Information
-  </div>
-  <div class="card-body">
-    <div class="row mb-2">
-      <div class="col-md-4">
-        @if (request.IsContractor)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        Contractor
-      </div>
-      <div class="col-md-4">
-        @if (request.IsHighProfileAccess)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        High Profile
-      </div>
-      <div class="col-md-4">
-        @if (request.IsGlobalAccess)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        Global Access
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-4">
-        <label>Caseload Type</label>
-        <span class="form-control">@request.CaseloadType</span>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Caseload Function</label>
-        <span class="form-control">@request.CaseloadFunction</span>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Caseload Number</label>
-        <span class="form-control">@request.CaseloadNumber</span>
-      </div>
-    </div>
-  </div>
-</div>
+<partial name="/Views/Shared/Partials/_AddAccessReview.cshtml" />
 
 <div class="row mt-3">
   <div class="col-12">
