--- a/PAM/Views/Review/ViewUpdateInfoReview.cshtml
+++ b/PAM/Views/Review/ViewUpdateInfoReview.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Review
 @{
-  ViewData["Title"] = "Viewing";
+  ViewData["Title"] = "View";
   var request = (Request)ViewData["request"];
 }
 
 <partial name="/Views/Shared/Partials/_ViewReview.cshtml" />
-<partial name="/Views/Shared/Partials/_TransferReview.cshtml" />
+<partial name="/Views/Shared/Partials/_UpdateInfoReview.cshtml" />
 
 <div class="row mt-3">
   <div class="col-12">
