--- a/PAM/Views/Review/EditRemoveAccessReview.cshtml
+++ b/PAM/Views/Review/EditRemoveAccessReview.cshtml
@@ -5,45 +5,7 @@
 }
 
 <partial name="/Views/Shared/Partials/_EditReview.cshtml" />
-
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">Systems Requested</div>
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Bureau</label>
-        <span class="form-control">@request.RequestedFor.Bureau.Description</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Unit / Job Function</label>
-        <span class="form-control">@request.RequestedFor.Unit.Name</span>
-      </div>
-    </div>
-    <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col" class="d-none d-md-table-cell">Description</th>
-            <th scope="col" class="nowrap">In Portfolio</th>
-          </tr>
-        </thead>
-        <tbody>
-          @foreach (var requestedSystem in request.Systems)
-          {
-            <tr>
-              <td>@requestedSystem.System.SystemId</td>
-              <td>@requestedSystem.System.Name</td>
-              <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
-              <td>@requestedSystem.InPortfolio</td>
-            </tr>
-          }
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+<partial name="/Views/Shared/Partials/_RemoveAccessReview.cshtml" />
 
 <form id="decision" method="post">
   <div class="card border-primary mt-5">
