--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -131,7 +131,7 @@
               <tr>
                 <td>@request.DisplayId</td>
                 <td>
-                  <a asp-action="ViewRequest">@request.RequestType.DisplayCode</a>
+                  <a asp-action="ViewRequest" asp-route-id="@request.RequestId">@request.RequestType.DisplayCode</a>
                 </td>
                 <td>@request.RequestStatus</td>
                 <td class="d-none d-md-table-cell">@request.SubmittedOn?.ToString("MM/dd/yyyy")</td>
