--- a/PAM/Views/Review/EditLeavingReview.cshtml
+++ b/PAM/Views/Review/EditLeavingReview.cshtml
@@ -62,7 +62,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">Systems To Update</div>
+  <div class="card-header">Systems Requested</div>
   <div class="card-body">
     <div class="row">
       <table class="table">
