--- a/PAM/Views/Review/EditRemoveAccessReview.cshtml
+++ b/PAM/Views/Review/EditRemoveAccessReview.cshtml
@@ -7,7 +7,7 @@
 <partial name="/Views/Shared/Partials/_EditReview.cshtml" />
 
 <div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">Systems Requested</div>
+  <div class="card-header bg-info text-white">Systems To Remove</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
