--- a/PAM/Views/Review/ViewLeavingReview.cshtml
+++ b/PAM/Views/Review/ViewLeavingReview.cshtml
@@ -1,13 +1,15 @@
 ﻿@model Review
 @{
-  ViewData["Title"] = "Review";
+  ViewData["Title"] = "Viewing";
   var request = (Request)ViewData["request"];
 }
 
-<partial name="/Views/Shared/Partials/_EditReview.cshtml" />
+<partial name="/Views/Shared/Partials/_ViewReview.cshtml" />
 
 <div class="card">
-  <div class="card-header">Additional Information</div>
+  <div class="card-header">
+    Additional Information
+  </div>
   <div class="card-body">
     <div class="row mb-2">
       <div class="col-md-4">
@@ -62,7 +64,9 @@
 </div>
 
 <div class="card">
-  <div class="card-header">Systems To Update</div>
+  <div class="card-header">
+    Systems To Remove
+  </div>
   <div class="card-body">
     <div class="row">
       <table class="table">
@@ -90,41 +94,8 @@
   </div>
 </div>
 
-<form id="decision" method="post">
-  <div class="card mt-5">
-    <div class="card-header">Your Decision</div>
-    <div class="card-body">
-      <div class="form-group">
-        <label for="comments">Comments (required for denying a request)</label>
-        <textarea class="form-control" id="comments" name="comments" rows="3" required></textarea>
-      </div>
-      <div class="form-group">
-        <label for="signature">Signature (Your password serves as your digital signature)</label>
-        <input type="password" class="form-control" id="signature" name="signature" required>
-      </div>
-    </div>
+<div class="row mt-3">
+  <div class="col-12">
+    <a asp-controller="Review" asp-action="MyReviews" class="btn btn-primary float-right">Return</a>
   </div>
-  <div class="row mt-3">
-    <div class="col-4">
-      <a asp-action="MyReviews" class="btn btn-secondary">Cancel</a>
-    </div>
-    <div class="col-8 text-right">
-      <button id="deny" class="btn btn-danger">Deny</button>
-      <button id="approve" class="btn btn-success ml-3">Approve</button>
-    </div>
-  </div>
-</form>
-
-@section Scripts{
-  <script>
-    $(function () {
-      $("#deny").click(function () {
-        $("#decision").attr("action", "/Review/Deny/@Model.ReviewId");
-      });
-      $("#approve").click(function () {
-        $("#comments").prop("required", false);
-        $("#decision").attr("action", "/Review/Approve/@Model.ReviewId");
-      });
-    });
-  </script>
-}
+</div>
