--- a/PAM/Views/Review/ViewRemoveAccessReview.cshtml
+++ b/PAM/Views/Review/ViewRemoveAccessReview.cshtml
@@ -7,9 +7,7 @@
 <partial name="/Views/Shared/Partials/_ViewReview.cshtml" />
 
 <div class="card">
-  <div class="card-header">
-    Systems Requested
-  </div>
+  <div class="card-header">Systems To Remove</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
