--- a/PAM/Views/Review/ViewUpdateInfoReview.cshtml
+++ b/PAM/Views/Review/ViewUpdateInfoReview.cshtml
@@ -65,7 +65,7 @@
 
 <div class="card">
   <div class="card-header">
-    Systems Requested
+    Systems To Update
   </div>
   <div class="card-body">
     <div class="row">
