--- a/PAM/Views/AddAccessRequest/AdditionalInfo.cshtml
+++ b/PAM/Views/AddAccessRequest/AdditionalInfo.cshtml
@@ -56,7 +56,7 @@
       <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-controller="AddAccessRequest" asp-action="AddAccess" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+      <a asp-controller="AddAccessRequest" asp-action="AddSystems" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
     </div>
   </div>
