--- a/PAM/wwwroot/css/login.css
+++ b/PAM/wwwroot/css/login.css
@@ -5,7 +5,7 @@ body {
   background-color: #19547b;
 }
 .bg-display {
-  background-image: url("../Images/losangeles.jpg");
+  background-image: url("../images/losangeles.jpg");
   width: 100%;
   min-height: 100vh;
   justify-content: flex-end;
