More changes to make reverse proxy work
. Added ForwardedHeaders
. Fixed ProbBadge URL
. Prepended PathBase to the absolute URLs in JavaScript code

--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
   <div class="login-container">
     <div class="login-form">
       <div class="logo">
-        <img src="~/images/" alt="LA COUNTY PROBATION LOGO" />
+        <img src="~/images/ProbBadge.png" alt="LA COUNTY PROBATION LOGO" />
       </div>
       <span class="login-title"> Probation Access Manager </span>
 
