--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -156,7 +156,7 @@
       function deleteRequest(id) {
         var msg = "Are you sure you want to delete this request?";
         if (confirm(msg))
-          window.location.href = "/Request/DeleteRequest/" + id;
+          window.location.href = "@Context.Request.PathBase/Request/DeleteRequest/" + id;
       }
     </script>
   }
