--- a/PAM/Views/ProcessingUnit/EditProcessingUnit.cshtml
+++ b/PAM/Views/ProcessingUnit/EditProcessingUnit.cshtml
@@ -13,7 +13,7 @@
       $("#addEmployee").typeahead({
         source: function (query, process) {
           $.ajax({
-            url: '/api/employee/search',
+            url: '@Context.Request.PathBase/api/employee/search',
             data: { term: query },
             success: function (results) {
               var employees = [];
@@ -68,7 +68,7 @@
         var unitId = "@Model.ProcessingUnitId";
         var employeeId = row.attr("data-employee-id");
         $.ajax({
-          url: "/api/processingUnit/" + unitId + "/employees/" + employeeId,
+          url: "@Context.Request.PathBase/api/processingUnit/" + unitId + "/employees/" + employeeId,
           method: "DELETE",
           success: function () {
             row.remove();
@@ -81,7 +81,7 @@
         var unitId = "@Model.ProcessingUnitId";
         var systemId = row.attr("data-system-id");
         $.ajax({
-          url: "/api/processingUnit/" + unitId + "/systems/" + systemId,
+          url: "@Context.Request.PathBase/api/processingUnit/" + unitId + "/systems/" + systemId,
           method: "DELETE",
           success: function () {
             row.remove();
