--- a/PAM/Views/TransferRequest/UnitSelection.cshtml
+++ b/PAM/Views/TransferRequest/UnitSelection.cshtml
@@ -29,7 +29,7 @@
         $("#next").prop("disabled", false);
         $("#saveDraft").prop("disabled", false);
         $.ajax({
-          url: "/api/portfolio/" + node.id,
+          url: "@Context.Request.PathBase/api/portfolio/" + node.id,
           success: function (data) {
             $("#systems").empty();
             data.forEach(function (system) {
