--- a/PAM/Views/Shared/ProgressBars/AddAccess.cshtml
+++ b/PAM/Views/Shared/ProgressBars/AddAccess.cshtml
@@ -4,10 +4,10 @@
       <a class="d-none d-md-inline" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]">Requester Information</a>
     </li>
     <li class="step" data-title="Unit Selection">
-      <a class="d-none d-md-inline" asp-action="UnitSelection" asp-route-id="@ViewData["id"]">Unit/Job Function</a>
+      <a class="d-none d-md-inline" asp-action="UnitSelection" asp-route-id="@ViewData["id"]">Unit/Job Function Selection</a>
     </li>
-    <li class="step" data-title="Add Systems">
-      <a class="d-none d-md-inline" asp-action="AddSystems" asp-route-id="@ViewData["id"]">Add Systems</a>
+    <li class="step" data-title="Systems To Add">
+      <a class="d-none d-md-inline" asp-action="SystemsToAdd" asp-route-id="@ViewData["id"]">Systems To Add</a>
     </li>
     <li class="step" data-title="Additional Information">
       <a class="d-none d-md-inline" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]">Additional Information</a>
