--- a/PAM/Views/AddAccessRequest/AdditionalInfo.cshtml
+++ b/PAM/Views/AddAccessRequest/AdditionalInfo.cshtml
@@ -36,6 +36,14 @@
       <input class="form-check-input" type="checkbox" asp-for="IsContractor">
       <label class="form-check-label" asp-for="IsContractor">Contractor</label>
     </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" asp-for="IsHighProfileAccess">
+      <label class="form-check-label" asp-for="IsHighProfileAccess">High Profile Access</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" asp-for="IsGlobalAccess">
+      <label class="form-check-label" asp-for="IsGlobalAccess">Global Access</label>
+    </div>
   </div>
   <div class="form-row">
     <div class="form-group col-12 col-md-4">
