Cleaned up TransferRequest

--- a/PAM/Views/Request/ViewTransferRequest.cshtml
+++ b/PAM/Views/Request/ViewTransferRequest.cshtml
@@ -59,7 +59,7 @@
             <div class="row">
               <div class="col-md-12">
                 <label>Bureau</label>
-                <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+                <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
               </div>
             </div>
             <div class="row mb-3">
