--- a/PAM/Views/Shared/ProgressBars/Transfer.cshtml
+++ b/PAM/Views/Shared/ProgressBars/Transfer.cshtml
@@ -3,11 +3,11 @@
     <li class="step" data-title="Requester Information">
       <a class="d-none d-md-inline" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]">Requester Information</a>
     </li>
-    <li class="step" data-title="Unit Selection">
-      <a class="d-none d-md-inline" asp-action="UnitSelection" asp-route-id="@ViewData["id"]">Unit/Job Function</a>
+    <li class="step" data-title="Transfer From Unit">
+      <a class="d-none d-md-inline" asp-action="TransferFromUnit" asp-route-id="@ViewData["id"]">Transfer From</a>
     </li>
-    <li class="step" data-title="Unit Transfer">
-      <a class="d-none d-md-inline" asp-action="UnitTransfer" asp-route-id="@ViewData["id"]">Transfer Unit/Job</a>
+    <li class="step" data-title="Transfer To Unit">
+      <a class="d-none d-md-inline" asp-action="TransferToUnit" asp-route-id="@ViewData["id"]">Transfer To</a>
     </li>
     <li class="step" data-title="Additional Information">
       <a class="d-none d-md-inline" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]">Additional Information</a>
