--- a/PAM/Views/AddAccessRequest/Summary.cshtml
+++ b/PAM/Views/AddAccessRequest/Summary.cshtml
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="form-group col-md-6">
         <label>Bureau</label>
-        <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+        <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
       </div>
       <div class="form-group col-md-6">
         <label>Unit / Job Function</label>
