--- a/PAM/Views/Request/ViewRequest.cshtml
+++ b/PAM/Views/Request/ViewRequest.cshtml
@@ -123,7 +123,7 @@
       <div class="row">
         <div class="form-group col-md-6">
           <label>Bureau</label>
-          <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+          <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
         </div>
         <div class="form-group col-md-6">
           <label>Unit / Job Function</label>
@@ -205,7 +205,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <label>Bureau</label>
-                  <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+                  <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
                 </div>
               </div>
               <div class="row mb-3">
@@ -323,7 +323,7 @@
       <div class="row">
         <div class="form-group col-md-6">
           <label>Bureau</label>
-          <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+          <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
         </div>
         <div class="form-group col-md-6">
           <label>Unit / Job Function</label>
