--- a/PAM/Views/Shared/Partials/_TransferReview.cshtml
+++ b/PAM/Views/Shared/Partials/_TransferReview.cshtml
@@ -55,7 +55,7 @@
             <div class="row">
               <div class="col-md-12">
                 <label>Bureau</label>
-                <span class="form-control">@request.RequestedFor.Bureau.Description</span>
+                <span class="form-control">@request.RequestedFor.Unit.Bureau.Description</span>
               </div>
             </div>
             <div class="row mb-3">
