--- a/PAM/Views/TransferRequest/AdditionalInfo.cshtml
+++ b/PAM/Views/TransferRequest/AdditionalInfo.cshtml
@@ -56,9 +56,8 @@
       <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="UnitTransfer" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+      <a asp-action="UnitSelection" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
     </div>
   </div>
 </form>
-
