--- a/PAM/Views/TransferRequest/Summary.cshtml
+++ b/PAM/Views/TransferRequest/Summary.cshtml
@@ -22,7 +22,7 @@
   </ol>
 </nav>
 
-<partial name="/Views/Shared/ProgressBars/PortfolioAssignment.cshtml" />
+<partial name="/Views/Shared/ProgressBars/Transfer.cshtml" />
 
 <div class="row mb-3">
   <div class="col-6">
@@ -33,183 +33,69 @@
   </div>
 </div>
 
-<partial name="/Views/Shared/Partials/_RequestInfoSummary.cshtml" />
-<partial name="/Views/Shared/Partials/_RequesterInfoSummary.cshtml" />
+<partial name="/Views/Shared/RequestPartials/_RequestInfoSummary.cshtml" />
+<partial name="/Views/Shared/RequestPartials/_RequesterInfoSummary.cshtml" />
 
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">
+<div class="card">
+  <div class="card-header">
     Systems Requested
-    <a class="float-right" asp-controller="TransferRequest" asp-action="UnitSelection" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
+    <a class="float-right" asp-action="TransferFromUnit" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
-        <div class="card border-info">
-          <h5 class="card-header text-center bg-info text-white">Current Bureau & Systems</h5>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-12">
-                <label>Bureau</label>
-                <span class="form-control">@Model.TransferredFromUnit.Bureau.Description</span>
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-12">
-                <label>Unit / Job Function</label>
-                <span class="form-control">@Model.TransferredFromUnit.Name</span>
-              </div>
-            </div>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                @foreach (var requestedSystem in Model.Systems)
-                {
-                  @if (requestedSystem.AccessType == SystemAccessType.Remove || requestedSystem.AccessType == SystemAccessType.Update)
-                  {
-                    <tr>
-                      <td>@requestedSystem.System.SystemId</td>
-                      <td>@requestedSystem.System.Name</td>
-                    </tr>
-                  }
-                }
-              </tbody>
-            </table>
-          </div>
-        </div>
+        <label>Transfer From Bureau</label>
+        <span class="form-control">@Model.TransferredFromUnit.Bureau.Description</span>
       </div>
       <div class="form-group col-md-6">
-        <div class="card border-info">
-          <h5 class="card-header text-center bg-info text-white">New Bureau & Systems</h5>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-12">
-                <label>Bureau</label>
-                <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-12">
-                <label>Unit / Job Function</label>
-                <span class="form-control">@Model.RequestedFor.Unit.Name</span>
-              </div>
-            </div>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Id</th>
-                  <th scope="col">Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                @foreach (var requestedSystem in Model.Systems)
-                {
-                  @if (requestedSystem.AccessType == SystemAccessType.Add || requestedSystem.AccessType == SystemAccessType.Update)
-                  {
-                    <tr>
-                      <td>@requestedSystem.System.SystemId</td>
-                      <td>@requestedSystem.System.Name</td>
-                    </tr>
-                  }
-                }
-              </tbody>
-            </table>
-          </div>
-        </div>
+        <label>Transfer From Unit</label>
+        <span class="form-control">@Model.TransferredFromUnit.Name</span>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <div class="card border-success">
-          <h5 class="card-header text-center bg-success text-white">Added Systems</h5>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-              </tr>
-            </thead>
-            <tbody>
-              @foreach (var requestedSystem in Model.Systems)
-              {
-                @if (requestedSystem.AccessType == SystemAccessType.Add)
-                {
-                  <tr>
-                    <td>@requestedSystem.System.SystemId</td>
-                    <td>@requestedSystem.System.Name</td>
-                  </tr>
-                }
-              }
-            </tbody>
-          </table>
-        </div>
+      <div class="form-group col-md-6">
+        <label>Transfer To Bureau</label>
+        <span class="form-control">@Model.RequestedFor.Unit.Bureau.Description</span>
       </div>
-      <div class="col-md-4">
-        <div class="card border-danger">
-          <h5 class="card-header text-center bg-danger text-white">Removed Systems</h5>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-              </tr>
-            </thead>
-            <tbody>
-              @foreach (var requestedSystem in Model.Systems)
-              {
-                @if (requestedSystem.AccessType == SystemAccessType.Remove)
-                {
-                  <tr>
-                    <td>@requestedSystem.System.SystemId</td>
-                    <td>@requestedSystem.System.Name</td>
-                  </tr>
-                }
-              }
-            </tbody>
-          </table>
-        </div>
+      <div class="form-group col-md-6">
+        <label>Transfer To Unit</label>
+        <span class="form-control">@Model.RequestedFor.Unit.Name</span>
       </div>
-      <div class="col-md-4">
-        <div class="card border-primary">
-          <h5 class="card-header text-center bg-primary text-white">Kept Systems</h5>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-              </tr>
-            </thead>
-            <tbody>
-              @foreach (var requestedSystem in Model.Systems)
-              {
-                @if (requestedSystem.AccessType == SystemAccessType.Update)
-                {
-                  <tr>
-                    <td>@requestedSystem.System.SystemId</td>
-                    <td>@requestedSystem.System.Name</td>
-                  </tr>
-                }
-              }
-            </tbody>
-          </table>
-        </div>
-      </div>
+    </div>
+    <div class="row">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col" class="d-none d-md-table-cell">Description</th>
+            <th scope="col" class="text-nowrap">Access Type</th>
+          </tr>
+        </thead>
+        <tbody>
+          @foreach (var requestedSystem in Model.Systems.OrderBy(s => s.AccessType))
+          {
+            <tr>
+              <td>@requestedSystem.System.SystemId</td>
+              <td>@requestedSystem.System.Name</td>
+              <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
+              <td>@requestedSystem.AccessType</td>
+            </tr>
+          }
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
 
-<div class="card border-info mb-1">
-  <div class="card-header bg-info text-white">
+<div class="card">
+  <div class="card-header">
     Additional Information
     <a class="float-right" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
   <div class="card-body">
     <div class="row mb-2">
-      <div class="col-md-4">
+      <div class="col">
         @if (Model.IsContractor)
         {
           <i class="far fa-check-square"></i>
@@ -219,28 +105,6 @@
           <i class="far fa-square"></i>
         }
         Contractor
-      </div>
-      <div class="col-md-4">
-        @if (Model.IsHighProfileAccess)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        High Profile
-      </div>
-      <div class="col-md-4">
-        @if (Model.IsGlobalAccess)
-        {
-          <i class="far fa-check-square"></i>
-        }
-        else
-        {
-          <i class="far fa-square"></i>
-        }
-        Global Access
       </div>
     </div>
     <div class="row">
@@ -260,7 +124,7 @@
   </div>
 </div>
 
-<partial name="/Views/Shared/Partials/_SignaturesSummary.cshtml" />
+<partial name="/Views/Shared/RequestPartials/_SignaturesSummary.cshtml" />
 
 <div class="row mt-3">
   <div class="col-6">
