--- a/PAM/Views/TransferRequest/TransferToUnit.cshtml
+++ b/PAM/Views/TransferRequest/TransferToUnit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Request
 @{
-  ViewData["Title"] = "Unit Transfer";
+  ViewData["Title"] = "Transfer To Unit";
   ViewData["id"] = Model.RequestId;
 }
 @section StyleSheets{
@@ -49,7 +49,6 @@
         node = $("#tree").treeview("getNode", ++nodeId);
       }
       if (node) {
-        console.log(node);
         $("#tree").treeview("selectNode", node);
         $('#tree').treeview('revealNode', [nodeId, { silent: true }]);
         $("#next").prop("disabled", false);
@@ -74,10 +73,10 @@
 
 <partial name="/Views/Shared/ProgressBars/Transfer.cshtml" />
 
-<form asp-controller="TransferRequest" asp-action="UnitTransfer" method="post">
-  <p>Please select the unit/job you wish to <strong>transfer</strong> to:</p>
+<form method="post">
   <div class="row">
     <div class="col-12 col-md-6 mb-3">
+      <p>Please select the unit/job function you are transfering TO:</p>
       <div id="tree"></div>
     </div>
     <div class="col-12 col-md-6 mb-3">
@@ -99,7 +98,7 @@
       <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-controller="TransferRequest" asp-action="UnitSelection" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
+      <a asp-action="TransferFromUnit" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
     </div>
   </div>
