--- a/PAM/Views/Processing/MyProcessings.cshtml
+++ b/PAM/Views/Processing/MyProcessings.cshtml
@@ -49,7 +49,7 @@
                 <div class="row">
                   <div class="form-group col-md-6 col-lg-3">
                     <label>Request</label>
-                    <span class="form-control"><a href="#">@request.DisplayId</a></span>
+                    <span class="form-control"><a asp-action="ViewRequest" asp-route-id="@request.RequestId">@request.DisplayId</a></span>
                   </div>
                   <div class="form-group col-md-6 col-lg-3">
                     <label>Type</label>
@@ -113,7 +113,7 @@
                 <div class="row">
                   <div class="form-group col-md-6 col-lg-3">
                     <label>Request</label>
-                    <span class="form-control"><a href="#">@request.DisplayId</a></span>
+                    <span class="form-control"><a asp-action="ViewRequest" asp-route-id="@request.RequestId">@request.DisplayId</a></span>
                   </div>
                   <div class="form-group col-md-6 col-lg-3">
                     <label>Type</label>
