--- a/PAM/Views/Account/Welcome.cshtml
+++ b/PAM/Views/Account/Welcome.cshtml
@@ -3,6 +3,17 @@
 }
 
 <div class="jumbotron">
+  <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="Upload">
+    <div class="form-group">
+      <div class="form-group">
+        <label for="uploadFile">Select File</label>
+        <input type="file" name="file" class="form-control-file" id="uploadFile">
+      </div>
+      <div class="form-group">
+          <input type="submit" class="input-group-text" value="Upload">
+      </div>
+    </div>
+</form>
   <h1 class="display-4 text-center"> Welcome to Probation Access Manager (PAM) </h1>
   <hr>
   <p>
