--- a/PAM/Views/_ViewImports.cshtml
+++ b/PAM/Views/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 @using System.Security.Claims
 @using PAM.Models
 @using PAM.Extensions
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
