--- a/PAM/Views/Location/Locations.cshtml
+++ b/PAM/Views/Location/Locations.cshtml
@@ -43,12 +43,15 @@
         <td class="d-none d-md-table-cell">@location.City</td>
         <td class="d-none d-md-table-cell">@location.State</td>
         <td class="d-none d-md-table-cell">@location.Zip</td>
-        <td>
-          <a asp-action="EditLocation" asp-route-id="@location.LocationId" class="btn btn-primary">
-            <i class="fas fa-edit"></i>
-            <span class="d-none d-sm-inline">Edit</span>
-          </a>
-        </td>
+        @if (isAllowed)
+        {
+          <td>
+            <a asp-action="EditLocation" asp-route-id="@location.LocationId" class="btn btn-primary">
+              <i class="fas fa-edit"></i>
+              <span class="d-none d-sm-inline">Edit</span>
+            </a>
+          </td>
+        }
       </tr>
     }
   </tbody>
