--- a/PAM/Views/ProcessingUnit/ProcessingUnits.cshtml
+++ b/PAM/Views/ProcessingUnit/ProcessingUnits.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ICollection<PAM.Models.ProcessingUnit>
 @{
   ViewData["Title"] = "Processing Units";
+  var isAllowed = (bool)ViewData["Admin"];
 }
 @section StyleSheets{
   <link rel="stylesheet" href="~/lib/bootstrap-table/bootstrap-table.min.css">
@@ -15,8 +16,10 @@
     <li class="breadcrumb-item active" aria-current="page">Processing Units</li>
   </ol>
 </nav>
-
-<p><a asp-action="AddProcessingUnit" class="btn btn-primary float-right">Add Processing Unit</a></p>
+@if (isAllowed)
+{
+  <p><a asp-action="AddProcessingUnit" class="btn btn-primary float-right">Add Processing Unit</a></p>
+}
 
 <p class="clearfix">
   <table class="table table-bordered table-hover">
@@ -35,12 +38,16 @@
             <a asp-action="ViewProcessingUnit" asp-route-id="@unit.ProcessingUnitId">@unit.Name</a>
           </td>
           <td class="d-none d-md-table-cell">@unit.Email</td>
-          <td>
-            <a asp-action="EditProcessingUnit" asp-route-id="@unit.ProcessingUnitId" class="btn btn-primary">
-              <i class="fas fa-edit"></i>
-              <span class="d-none d-sm-inline">Edit</span>
-            </a>
-          </td>
+          @if (isAllowed)
+          {
+            <td>
+              <a asp-action="EditProcessingUnit" asp-route-id="@unit.ProcessingUnitId" class="btn btn-primary">
+                <i class="fas fa-edit"></i>
+                <span class="d-none d-sm-inline">Edit</span>
+              </a>
+            </td>
+          }
+
         </tr>
       }
     </tbody>
