--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -41,8 +41,7 @@
             <a class="nav-link" asp-controller="Employee" asp-action="Employees">Users</a>
           </li>
           <li class="nav-item">
-            @* TEST AUDITLOG *@
-            <a class="nav-link" asp-controller="AuditLog" asp-action="ListLogs">Reports</a>
+            <a class="nav-link" asp-controller="AuditLog" asp-action="AuditLogs">Reports</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="organizationMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Organization</a>
