--- a/PAM/Views/Account/Welcome.cshtml
+++ b/PAM/Views/Account/Welcome.cshtml
@@ -3,17 +3,15 @@
 }
 
 <div class="jumbotron">
-  <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="Upload">
+  @*
+  <form asp-action="Upload" enctype="multipart/form-data" method="post">
     <div class="form-group">
-      <div class="form-group">
-        <label for="uploadFile">Select File</label>
-        <input type="file" name="file" class="form-control-file" id="uploadFile">
-      </div>
-      <div class="form-group">
-          <input type="submit" class="input-group-text" value="Upload">
-      </div>
-    </div>
+    <label for="exampleFormControlFile1" name="fileUpload">Example file input</label>
+    <input type="file" class="form-control-file" name="fileUpload" id="exampleFormControlFile1">
+      <button type="submit"> SUBMIT</button>
+  </div>
 </form>
+  *@
   <h1 class="display-4 text-center"> Welcome to Probation Access Manager (PAM) </h1>
   <hr>
   <p>
