--- a/PAM/Views/PortfolioAssignmentRequest/Signatures.cshtml
+++ b/PAM/Views/PortfolioAssignmentRequest/Signatures.cshtml
@@ -48,7 +48,7 @@
       <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+      <a asp-action="Forms" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
     </div>
   </div>
